--- a/src/styles/global-variables.scss
+++ b/src/styles/global-variables.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Euclid Circular A';
-	src: url('../fonts/Euclid\ Circular\ A\ Light.ttf') format('truetype');
+	src: url('../fonts/euclid-circular-a.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
