--- a/src/components/navigation/navbar/styles.module.scss
+++ b/src/components/navigation/navbar/styles.module.scss
@@ -56,6 +56,7 @@
 
 			.dropdown-menu-container {
 				>h2 {
+					text-align: left;
 					margin: 16px 0 10px;
 					font-size: 13px;
 					font-weight: 400;
@@ -139,7 +140,6 @@
 					border-radius: 0 0 4px 4px;
 
 					&-container {
-
 						>h2,
 						>button {
 							padding: 0 24px 0;
